--- a/testhome.html
+++ b/testhome.html
@@ -58,8 +58,8 @@
           ============================================= -->
                         <nav id="primary-menu">
                             <ul class="norightborder norightpadding norightmargin">
-                                <li class="current">
-                                    <a class="current" href="aboutus.html">
+                                <li id="current">
+                                    <a id="current" href="aboutus.html">
                                         <div>About Us</div>
                                     </a>
                                     <ul>
@@ -572,10 +572,10 @@
                             <div class="widget widget_links clearfix">
                                 <h4>Quick Links</h4>
                                 <ul>
-                                    <li><a href="http://codex.wordpress.org/">Fast Facts</a></li>
-                                    <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Engagement Models</a></li>
-                                    <li><a href="http://wordpress.org/extend/plugins/">Blogs</a></li>
-                                    <li><a href="http://wordpress.org/support/">Sitemap</a></li>
+                                    <li><a href="producteng.html">Fast Facts</a></li>
+                                    <li><a href="enterpriseadm.html">Engagement Models</a></li>
+                                    <li><a href="enterprisemob.html">Blogs</a></li>
+                                    <li><a href="businessint.html">Sitemap</a></li>
                                     <li><a href="careers.html">Careers</a></li>
                                 </ul>
                             </div>
@@ -622,10 +622,10 @@
                         <div class="widget widget_links clearfix">
                             <h4>Services</h4>
                             <ul>
-                                <li><a href="http://codex.wordpress.org/">Software Product Engineering</a></li>
-                                <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Enterprise ADM</a></li>
-                                <li><a href="http://wordpress.org/extend/plugins/">Enterprise Mobility</a></li>
-                                <li><a href="http://wordpress.org/support/">Business Intelligence and Analytics</a></li>
+                                <li><a href="producteng.html">Software Product Engineering</a></li>
+                                <li><a href="enterpriseadm.html">Enterprise ADM</a></li>
+                                <li><a href="enterprisemob.html">Enterprise Mobility</a></li>
+                                <li><a href="businessint.html">Business Intelligence and Analytics</a></li>
                                 <li><a href="careers.html">Data Warehouse</a></li>
                                 <li><a href="#">CRM Solutions</a></li>
                             </ul>
