--- a/dedicatedcoc.html
+++ b/dedicatedcoc.html
@@ -189,7 +189,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="current" href="retail.html">
+                                        <a id="current" href="retail.html">
                                             <div>Retail &amp; Consumer</div>
                                         </a>
                                     </li>
@@ -212,8 +212,8 @@
                                     </li>
                                 </ul>
                             </li>
-                            <li class="current">
-                                <a class="current">
+                            <li id="current">
+                                <a id="current">
                                     <div>Our Approach</div>
                                 </a>
                                 <ul>
@@ -240,7 +240,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="contactus.html">
+                                <a href="contact.html">
                                     <div>Contact Us</div>
                                 </a>
                             </li>
@@ -332,10 +332,10 @@
                 <div class="widget widget_links clearfix">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="http://codex.wordpress.org/">Fast Facts</a></li>
-                        <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Engagement Models</a></li>
-                        <li><a href="http://wordpress.org/extend/plugins/">Blogs</a></li>
-                        <li><a href="http://wordpress.org/support/">Sitemap</a></li>
+                        <li><a href="producteng.html">Fast Facts</a></li>
+                        <li><a href="enterpriseadm.html">Engagement Models</a></li>
+                        <li><a href="enterprisemob.html">Blogs</a></li>
+                        <li><a href="businessint.html">Sitemap</a></li>
                         <li><a href="careers.html">Careers</a></li>
                     </ul>
                 </div>
@@ -382,12 +382,12 @@
             <div class="widget widget_links clearfix">
                 <h4>Services</h4>
                 <ul>
-                    <li><a href="http://codex.wordpress.org/">Software Product Engineering</a></li>
-                    <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Enterprise ADM</a></li>
-                    <li><a href="http://wordpress.org/extend/plugins/">Enterprise Mobility</a></li>
-                    <li><a href="http://wordpress.org/support/">Business Intelligence and Analytics</a></li>
-                    <li><a href="careers.html">Data Warehouse</a></li>
-                    <li><a href="#">CRM Solutions</a></li>
+                    <li><a href="producteng.html">Software Product Engineering</a></li>
+                    <li><a href="enterpriseadm.html">Enterprise ADM</a></li>
+                    <li><a href="enterprisemob.html">Enterprise Mobility</a></li>
+                    <li><a href="businessint.html">Business Intelligence and Analytics</a></li>
+                    <li><a href="datawarehouse.html">Data Warehouse</a></li>
+                    <li><a href="crmsolutions.html">CRM Solutions</a></li>
                 </ul>
             </div>
         </div>
