--- a/search.html
+++ b/search.html
@@ -764,10 +764,10 @@
 								<h4>Blogroll</h4>
 
 								<ul>
-									<li><a href="http://codex.wordpress.org/">Documentation</a></li>
-									<li><a href="http://wordpress.org/support/forum/requests-and-feedback">Feedback</a></li>
-									<li><a href="http://wordpress.org/extend/plugins/">Plugins</a></li>
-									<li><a href="http://wordpress.org/support/">Support Forums</a></li>
+									<li><a href="producteng.html">Documentation</a></li>
+									<li><a href="enterpriseadm.html">Feedback</a></li>
+									<li><a href="enterprisemob.html">Plugins</a></li>
+									<li><a href="businessint.html">Support Forums</a></li>
 									<li><a href="careers.html">Themes</a></li>
 									<li><a href="http://wordpress.org/news/">WordPress Blog</a></li>
 									<li><a href="http://planet.wordpress.org/">WordPress Planet</a></li>
