--- a/travel.html
+++ b/travel.html
@@ -180,13 +180,13 @@
                                         </li>
                                     </ul>
                                 </li>
-                                <li class="current">
+                                <li id="current">
                                     <a href="#">
                                         <div>Industries</div>
                                     </a>
                                     <ul>
                                         <li>
-                                            <a class="current" href="banking.html">
+                                            <a id="current" href="banking.html">
                                                 <div>Banking, Finance & Insurance</div>
                                             </a>
                                         </li>
@@ -262,7 +262,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="contactus.html">
+                                    <a href="contact.html">
                                         <div>Contact Us</div>
                                     </a>
                                 </li>
@@ -372,10 +372,10 @@
                                 <h4>Quick Links</h4>
 
                                 <ul>
-                                    <li><a href="http://codex.wordpress.org/">Fast Facts</a></li>
-                                    <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Engagement Models</a></li>
-                                    <li><a href="http://wordpress.org/extend/plugins/">Blogs</a></li>
-                                    <li><a href="http://wordpress.org/support/">Sitemap</a></li>
+                                    <li><a href="producteng.html">Fast Facts</a></li>
+                                    <li><a href="enterpriseadm.html">Engagement Models</a></li>
+                                    <li><a href="enterprisemob.html">Blogs</a></li>
+                                    <li><a href="businessint.html">Sitemap</a></li>
                                     <li><a href="careers.html">Careers</a></li>
                                 </ul>
 
@@ -435,12 +435,12 @@
                             <h4>Services</h4>
 
                             <ul>
-                                <li><a href="http://codex.wordpress.org/">Software Product Engineering</a></li>
-                                <li><a href="http://wordpress.org/support/forum/requests-and-feedback">Enterprise ADM</a></li>
-                                <li><a href="http://wordpress.org/extend/plugins/">Enterprise Mobility</a></li>
-                                <li><a href="http://wordpress.org/support/">Business Intelligence and Analytics</a></li>
-                                <li><a href="careers.html">Data Warehouse</a></li>
-                                <li><a href="#">CRM Solutions</a></li>
+                                <li><a href="producteng.html">Software Product Engineering</a></li>
+                                <li><a href="enterpriseadm.html">Enterprise ADM</a></li>
+                                <li><a href="enterprisemob.html">Enterprise Mobility</a></li>
+                                <li><a href="businessint.html">Business Intelligence and Analytics</a></li>
+                                <li><a href="datawarehouse.html">Data Warehouse</a></li>
+                                <li><a href="crmsolutions.html">CRM Solutions</a></li>
                             </ul>
 
                         </div>
