fixed url errors

--- a/government.html
+++ b/government.html
@@ -201,7 +201,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="shop.html">
+                                <a href="#">
                                     <div>Knowledge Center</div>
                                 </a>
                                 <ul>
@@ -322,7 +322,7 @@
                     <li><a href="producteng.html">Fast Facts</a></li>
                     <li><a href="enterpriseadm.html">Engagement Models</a></li>
                     <li><a href="enterprisemob.html">Blogs</a></li>
-                    <li><a href="businessint.html">Sitemap</a></li>
+                    <li><a href="sitemap.html">Sitemap</a></li>
                     <li><a href="careers.html">Careers</a></li>
                 </ul>
             </div>
