--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="shop.html">
+                            <a href="#">
                                 <div>Knowledge Center</div>
                             </a>
                             <ul>
@@ -617,7 +617,7 @@
                     <ul>
                         <li><a href="engagement.html">Engagement Models</a></li>
                         <li><a href="">Blogs</a></li>
-                        <li><a href="businessint.html">Sitemap</a></li>
+                        <li><a href="sitemap.html">Sitemap</a></li>
                         <li><a href="careers.html">Careers</a></li>
                     </ul>
                 </div>
