--- a/search.html
+++ b/search.html
@@ -538,9 +538,9 @@
 									</ul>
 								</div>
 							</li>
-							<li><a href="shop.html"><div>Shop</div></a>
+							<li><a href="#"><div>Shop</div></a>
 								<ul>
-									<li><a href="shop.html"><div>4 Columns</div></a></li>
+									<li><a href="#"><div>4 Columns</div></a></li>
 									<li><a href="shop-3.html"><div>3 Columns</div></a>
 										<ul>
 											<li><a href="shop-3.html"><div>Full Width</div></a></li>
