--- a/aboutus.html
+++ b/aboutus.html
@@ -223,7 +223,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="shop.html">
+                                    <a href="#">
                                         <div>Knowledge Center</div>
                                     </a>
                                     <ul>
@@ -361,7 +361,7 @@
                                     <li><a href="producteng.html">Fast Facts</a></li>
                                     <li><a href="enterpriseadm.html">Engagement Models</a></li>
                                     <li><a href="enterprisemob.html">Blogs</a></li>
-                                    <li><a href="businessint.html">Sitemap</a></li>
+                                    <li><a href="sitemap.html">Sitemap</a></li>
                                     <li><a href="careers.html">Careers</a></li>
                                 </ul>
 
